// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MyOverview /> renders correctly with error 1`] = `
Array [
  <div
    className="row:title"
  >
    <h1
      className="heading -black -xlarge"
      data-testid="my-details-heading"
    >
      My 
      Quotes
    </h1>
  </div>,
  <div
    className="dpd-content"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": "40rem",
      }
    }
  >
    You have no 
    Quotes
    .
  </div>,
]
`;

exports[`<MyOverview /> renders correctly with loading 1`] = `
Array [
  <div
    className="row:title"
  >
    <h1
      className="heading -black -xlarge"
      data-testid="my-details-heading"
    >
      My 
      Quotes
    </h1>
  </div>,
  <div
    className="row:bg-lighter -thin"
  >
    <div
      className="row:results"
    >
      <div
        className="loading -large"
      >
        <svg
          className="loading--svg"
          viewBox="-75 -75 150 150"
        >
          <circle
            className="loading--stroke"
            cx="0"
            cy="0"
            r="37.5"
          />
        </svg>
      </div>
    </div>
  </div>,
]
`;

exports[`<MyOverview /> renders orders correctly with data 1`] = `
Array [
  <div
    className="row:title"
  >
    <h1
      className="heading -black -xlarge"
      data-testid="my-details-heading"
    >
      My 
      Orders
    </h1>
  </div>,
  <div
    className="row:bg-lighter -thin"
  >
    <div
      className="row:results"
    >
      <div
        className="choiceboxes -cols-3 -teal"
      >
        <button
          className="choicebox -active"
          onClick={[Function]}
          type="button"
        >
          All Orders
        </button>
      </div>
      <span
        className="text -regular -darker"
      >
        Showing 
        2
         Orders
      </span>
      <div
        className="select"
      >
        <select
          className="select--native"
          onChange={[Function]}
          value="availability_ASC"
        >
          <option
            disabled={true}
            value=""
          >
            Please Select
          </option>
          <option
            value="availability_ASC"
          >
            Newest To Oldest
          </option>
          <option
            value="availability_DESC"
          >
            Oldest To Newest
          </option>
          <option
            value="rate_DESC"
          >
            Price low to high
          </option>
          <option
            value="rate_ASC"
          >
            Price high to low
          </option>
        </select>
        <span
          className="icon select--chevron"
        >
          <i
            className="icon -stroke -dark"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <polyline
                points="112 184 256 328 400 184"
                style={
                  Object {
                    "fill": "none",
                    "stroke": "var(--class-color)",
                    "strokeLinecap": "round",
                    "strokeLinejoin": "round",
                    "strokeWidth": 48,
                  }
                }
              />
            </svg>
          </i>
        </span>
      </div>
      <div
        className="row:cards-1col"
      >
        <div
          className="card -inline"
          data-testid="card"
          style={
            Object {
              "--img-w": "300px",
            }
          }
        >
          <img
            className="card-image"
            data-testid="card-image"
            loading="lazy"
            onError={[Function]}
            sizes="(min-width:320px) 800px, 1200px"
            src="https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=1920,width=1920,quality=75,sharpness=0,metadata=none/https:"
            srcSet="https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=320,width=320,quality=60,sharpness=0,metadata=none/https: 320w, https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=800,width=800,quality=70,sharpness=0,metadata=none/https: 800w, https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=1200,width=1200,quality=75,sharpness=0,metadata=none/https: 1200w"
          />
          <div
            className="title"
          >
            <span
              className="heading -black -lead"
              data-testid="card-heading"
            >
               
            </span>
          </div>
          <div
            className="spec-list"
          >
            <span>
              Available
               
              Now
            </span>
            <span>
              Initial Rental
               
              £100 (inc. VAT)
            </span>
            <span>
              Contract Length
               
              36 month
            </span>
            <span>
              Annual Mileage
               
              100
            </span>
            <span>
              Maintanence
               
              No
            </span>
            <span>
              Fuel
               
              -
            </span>
            <span>
              Transmission
               
              -
            </span>
            <span>
              Color
               
              colour
            </span>
            <span>
              Trim
               
              trim
            </span>
            <hr />
            <div>
              <span>
                Date: 
              </span>
              <span>
                16.06.2020
              </span>
            </div>
          </div>
          <div
            className="-flex-h"
          >
            <div
              className="price -large -black"
            >
              <span
                className="price--sub"
              >
                £
              </span>
              <span
                className="price--pounds"
              >
                100
              </span>
              <span
                className="price--sub"
              >
                .
                00
              </span>
              <div
                className="price--label"
              >
                Per Month Inc.VAT
              </div>
            </div>
            <button
              className="button -teal -regular -solid"
              onClick={[Function]}
            >
              <div
                className="button--inner"
              >
                View Order
              </div>
            </button>
          </div>
        </div>
        <div
          className="card -inline"
          data-testid="card"
          style={
            Object {
              "--img-w": "300px",
            }
          }
        >
          <img
            className="card-image"
            data-testid="card-image"
            loading="lazy"
            onError={[Function]}
            sizes="(min-width:320px) 800px, 1200px"
            src="https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=1920,width=1920,quality=75,sharpness=0,metadata=none/https:"
            srcSet="https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=320,width=320,quality=60,sharpness=0,metadata=none/https: 320w, https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=800,width=800,quality=70,sharpness=0,metadata=none/https: 800w, https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=1200,width=1200,quality=75,sharpness=0,metadata=none/https: 1200w"
          />
          <div
            className="title"
          >
            <span
              className="heading -black -lead"
              data-testid="card-heading"
            >
               
            </span>
          </div>
          <div
            className="spec-list"
          >
            <span>
              Available
               
              Now
            </span>
            <span>
              Initial Rental
               
              £100 (ex. VAT)
            </span>
            <span>
              Contract Length
               
              36 month
            </span>
            <span>
              Annual Mileage
               
              100
            </span>
            <span>
              Maintanence
               
              No
            </span>
            <span>
              Fuel
               
              -
            </span>
            <span>
              Transmission
               
              -
            </span>
            <span>
              Color
               
              colour
            </span>
            <span>
              Trim
               
              trim
            </span>
            <hr />
            <div>
              <span>
                Date: 
              </span>
              <span>
                16.06.2020
              </span>
            </div>
          </div>
          <div
            className="-flex-h"
          >
            <div
              className="price -large -black"
            >
              <span
                className="price--sub"
              >
                £
              </span>
              <span
                className="price--pounds"
              >
                100
              </span>
              <span
                className="price--sub"
              >
                .
                00
              </span>
              <div
                className="price--label"
              >
                Per Month Ex.VAT
              </div>
            </div>
            <button
              className="button -teal -regular -solid"
              onClick={[Function]}
            >
              <div
                className="button--inner"
              >
                View Order
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<MyOverview /> renders quotes correctly with data 1`] = `
Array [
  <div
    className="row:title"
  >
    <h1
      className="heading -black -xlarge"
      data-testid="my-details-heading"
    >
      My 
      Quotes
    </h1>
  </div>,
  <div
    className="row:bg-lighter -thin"
  >
    <div
      className="row:results"
    >
      <span
        className="text -regular -darker"
      >
        Showing 
        2
         Orders
      </span>
      <div
        className="select"
      >
        <select
          className="select--native"
          onChange={[Function]}
          value="availability_ASC"
        >
          <option
            disabled={true}
            value=""
          >
            Please Select
          </option>
          <option
            value="availability_ASC"
          >
            Newest To Oldest
          </option>
          <option
            value="availability_DESC"
          >
            Oldest To Newest
          </option>
          <option
            value="rate_DESC"
          >
            Price low to high
          </option>
          <option
            value="rate_ASC"
          >
            Price high to low
          </option>
        </select>
        <span
          className="icon select--chevron"
        >
          <i
            className="icon -stroke -dark"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <polyline
                points="112 184 256 328 400 184"
                style={
                  Object {
                    "fill": "none",
                    "stroke": "var(--class-color)",
                    "strokeLinecap": "round",
                    "strokeLinejoin": "round",
                    "strokeWidth": 48,
                  }
                }
              />
            </svg>
          </i>
        </span>
      </div>
      <div
        className="row:cards-1col"
      >
        <div
          className="card -inline"
          data-testid="card"
          style={
            Object {
              "--img-w": "300px",
            }
          }
        >
          <img
            className="card-image"
            data-testid="card-image"
            loading="lazy"
            onError={[Function]}
            sizes="(min-width:320px) 800px, 1200px"
            src="https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=1920,width=1920,quality=75,sharpness=0,metadata=none/https:"
            srcSet="https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=320,width=320,quality=60,sharpness=0,metadata=none/https: 320w, https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=800,width=800,quality=70,sharpness=0,metadata=none/https: 800w, https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=1200,width=1200,quality=75,sharpness=0,metadata=none/https: 1200w"
          />
          <div
            className="title"
          >
            <span
              className="heading -black -lead"
              data-testid="card-heading"
            >
               
            </span>
          </div>
          <div
            className="spec-list"
          >
            <span>
              Available
               
              Now
            </span>
            <span>
              Initial Rental
               
              £100 (inc. VAT)
            </span>
            <span>
              Contract Length
               
              36 month
            </span>
            <span>
              Annual Mileage
               
              100
            </span>
            <span>
              Maintanence
               
              No
            </span>
            <span>
              Fuel
               
              -
            </span>
            <span>
              Transmission
               
              -
            </span>
            <span>
              Color
               
              colour
            </span>
            <span>
              Trim
               
              trim
            </span>
            <hr />
            <div>
              <span>
                Date: 
              </span>
              <span>
                16.06.2020
              </span>
            </div>
          </div>
          <div
            className="-flex-h"
          >
            <div
              className="price -large -black"
            >
              <span
                className="price--sub"
              >
                £
              </span>
              <span
                className="price--pounds"
              >
                100
              </span>
              <span
                className="price--sub"
              >
                .
                00
              </span>
              <div
                className="price--label"
              >
                Per Month Inc.VAT
              </div>
            </div>
            <button
              className="button -teal -regular -solid"
              onClick={[Function]}
            >
              <div
                className="button--inner"
              >
                Continue To Order
              </div>
            </button>
          </div>
        </div>
        <div
          className="card -inline"
          data-testid="card"
          style={
            Object {
              "--img-w": "300px",
            }
          }
        >
          <img
            className="card-image"
            data-testid="card-image"
            loading="lazy"
            onError={[Function]}
            sizes="(min-width:320px) 800px, 1200px"
            src="https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=1920,width=1920,quality=75,sharpness=0,metadata=none/https:"
            srcSet="https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=320,width=320,quality=60,sharpness=0,metadata=none/https: 320w, https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=800,width=800,quality=70,sharpness=0,metadata=none/https: 800w, https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=1200,width=1200,quality=75,sharpness=0,metadata=none/https: 1200w"
          />
          <div
            className="title"
          >
            <span
              className="heading -black -lead"
              data-testid="card-heading"
            >
               
            </span>
          </div>
          <div
            className="spec-list"
          >
            <span>
              Available
               
              Now
            </span>
            <span>
              Initial Rental
               
              £100 (ex. VAT)
            </span>
            <span>
              Contract Length
               
              36 month
            </span>
            <span>
              Annual Mileage
               
              100
            </span>
            <span>
              Maintanence
               
              No
            </span>
            <span>
              Fuel
               
              -
            </span>
            <span>
              Transmission
               
              -
            </span>
            <span>
              Color
               
              colour
            </span>
            <span>
              Trim
               
              trim
            </span>
            <hr />
            <div>
              <span>
                Date: 
              </span>
              <span>
                16.06.2020
              </span>
            </div>
          </div>
          <div
            className="-flex-h"
          >
            <div
              className="price -large -black"
            >
              <span
                className="price--sub"
              >
                £
              </span>
              <span
                className="price--pounds"
              >
                100
              </span>
              <span
                className="price--sub"
              >
                .
                00
              </span>
              <div
                className="price--label"
              >
                Per Month Ex.VAT
              </div>
            </div>
            <button
              className="button -teal -regular -solid"
              onClick={[Function]}
            >
              <div
                className="button--inner"
              >
                Continue To Order
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
